[gd_scene load_steps=11 format=2]

[ext_resource path="res://Art/Store.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Chest.gd" type="Script" id=2]
[ext_resource path="res://FFFFORWA.TTF" type="DynamicFontData" id=3]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 4
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 19.5, 5 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 5, 5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 2 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 5, 3 )

[node name="Chest" type="Node2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -15, 3 )
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, 0 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sign" type="Sprite" parent="."]
position = Vector2( 10, -9 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="Sign"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -34.0
margin_top = -28.0
margin_right = -34.0
margin_bottom = -28.0
custom_fonts/font = SubResource( 2 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Sign"]
margin_left = -19.0
margin_top = 10.0
margin_right = 21.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 3 )
text = "5"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Sign"]
margin_left = 18.0
margin_top = 10.0
margin_right = 27.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 3 )
text = "22"
align = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 3, 4 )
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2( 32.5, 4 )
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
shape = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Platform1" type="Area2D" parent="."]
position = Vector2( 11, 9 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform1"]
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="ItemSpawn" type="Position2D" parent="."]
position = Vector2( 11, -4 )

[node name="GoblinUpgrade" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoblinUpgrade"]
position = Vector2( 32.5, 8 )
shape = SubResource( 6 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Platform1" to="." method="_on_Platform1_body_entered"]
[connection signal="body_entered" from="GoblinUpgrade" to="." method="_on_GoblinUpgrade_body_entered"]
